# MeoAssistantArknightsCLI

./: .gitignore  .gitmodules  CHANGELOG.md  MeoAssistantArknightsCLI.cabal  README.md  cabal_run
app/: JsonParser.hs  Maa.hs  Main.hs
tools/: .gitignore  build.sh  clone.sh  init.sh
