cabal-version:      2.4
name:               MeoAssistantArknightsCLI
version:            0.1.0.0
author:             Mslxl

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
description: MeoAssistantArknights CLI with Haskell

-- A URL where users can report bugs.
bug-reports: https://github.com/mslxl/MeoAssistantArknightsCLI/issues

-- The license under which the package is released.
license-file:       LICENSE
maintainer:         i@mslxl.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable maa
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    JsonParser, Maa
    ld-options:       -Wl,-rpath,$ORIGIN/lib
    extra-libraries:  MeoAssistant
    extra-lib-dirs:   lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0 , directory ^>=1.3.6.0, data-default ^>=0.7.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
